@@ -1,3 +1,9 @@
+2013-01-02  Sriraman Tallam  <tmsriram@google.com>
+
+	* config/i386/i386.c (ix86_get_function_versions_dispatcher): Fix bug
+	in loop predicate.
+	(fold_builtin_cpu): Do not share cpu model decls across statements.
+
 2013-01-02  Jason Merrill  <jason@redhat.com>
 
 	PR c++/55804
